--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -38,7 +37,7 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid lightgrey;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -54,6 +53,10 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+button.small {
+  font-size: 0.75rem;
+  padding: 0.25rem 0.3rem;
+}
 
 .flex {
   display: flex;
@@ -63,6 +66,25 @@ button:focus-visible {
   background: rgba(255, 255, 255, 0.02);
   border: 1px solid gray;
   padding: 0 1rem 1rem;
+}
+
+.form-fields {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+.form-field {
+  display: contents;
+}
+label {
+  justify-self: end;
+}
+input {
+  margin-left: 0.5rem;
+  padding: 0.25rem;
+  border-radius: 4px;
+  border: 1px solid gray;
 }
 
 @media (prefers-color-scheme: light) {
